--- a/CarRentalManagement/Components/Pages/CustomerPages/Index.razor
+++ b/CarRentalManagement/Components/Pages/CustomerPages/Index.razor
@@ -20,14 +20,18 @@
     <PropertyColumn Property="customer => customer.ContactNumber" />
     <PropertyColumn Property="customer => customer.EmailAddress" />
     <PropertyColumn Property="customer => customer.DateCreated" />
-    <PropertyColumn Property="customer => customer.DateUpdated" />
+[dbo].[AspNetUserRoles]    <PropertyColumn Property="customer => customer.DateUpdated" />
     <PropertyColumn Property="customer => customer.CreatedBy" />
     <PropertyColumn Property="customer => customer.UpdatedBy" />
 
     <TemplateColumn Context="customer">
         <a href="@($"customers/edit?id={customer.Id}")">Edit</a> |
         <a href="@($"customers/details?id={customer.Id}")">Details</a> |
-        <a href="@($"customers/delete?id={customer.Id}")">Delete</a>
+        
+        <AuthorizeView Roles="Administrator">
+            | <a href="@($"customers/delete?id={customer.Id}")">Delete</a>
+        </AuthorizeView>
+
     </TemplateColumn>
 </QuickGrid>
 
